--- a/whiteboard.html
+++ b/whiteboard.html
@@ -71,7 +71,7 @@
         $("#text").attr("src", "UI Images/text.png");
         $("#eraser").attr("src", "UI Images/eraser.png");
         $("#colors").hide();
-
+        $("#size-options").hide();
         textMode = false;
         try {
             currentText.exitEditing();
